--- a/styles/style.css
+++ b/styles/style.css
@@ -16,14 +16,14 @@
 .enlaces{
   display: flex;
   height:40px;
-  border-right: 2px solid;
+  
   vertical-align: center;
   align-items: center;
 }
 .enlaces a{
   text-decoration: none;
   color: white;
-  padding:0px 10px;
+  padding:5px 10px;
 }
 .enlaces a:hover{
   border-bottom: 2px solid white;
@@ -40,7 +40,7 @@
 .administracion a{
   text-decoration: none;
   color: white;
-  padding:0px 10px;
+  padding:5px 10px;
 }
 .administracion a:hover{
   border-bottom: 2px solid white;
@@ -179,4 +179,9 @@
 .redes-sociales a{
   color: white;
   text-decoration: none;
+}
+.redes-sociales a svg{
+  width: 36px;
+  height: 36px;
+  margin: 10px 10px;
 }
