--- a/styles/style.css
+++ b/styles/style.css
@@ -56,14 +56,16 @@
   display: grid;
   grid-template-columns: 2, 1fr;
   grid-template-rows:2, 1fr;
-  padding: 50px 50px;
+  padding: 100px 50px;
   background: linear-gradient(to right, #ffffff, #E1D4C4,#804000, #000000);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask2914%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='url(%23SvgjsLinearGradient2915)'%3e%3c/rect%3e%3cpath d='M 0%2c179 C 57.6%2c167.6 172.8%2c114.6 288%2c122 C 403.2%2c129.4 460.8%2c226.4 576%2c216 C 691.2%2c205.6 748.8%2c65.8 864%2c70 C 979.2%2c74.2 1036.8%2c227.6 1152%2c237 C 1267.2%2c246.4 1382.4%2c141 1440%2c117L1440 560L0 560z' fill='rgba(76%2c 49%2c 9%2c 1)'%3e%3c/path%3e%3cpath d='M 0%2c333 C 57.6%2c368 172.8%2c498 288%2c508 C 403.2%2c518 460.8%2c397.4 576%2c383 C 691.2%2c368.6 748.8%2c430.6 864%2c436 C 979.2%2c441.4 1036.8%2c391.4 1152%2c410 C 1267.2%2c428.6 1382.4%2c505.2 1440%2c529L1440 560L0 560z' fill='rgba(88%2c 63%2c 12%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask2914'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='50%25' y1='100%25' x2='50%25' y2='0%25' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient2915'%3e%3cstop stop-color='%230e2a47' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(68%2c 38%2c 20%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+  color: white;
 }
 .titulares{
   grid-column: 1;
   grid-row: 1;
   font-family: Arial, Helvetica, sans-serif;
-  color: #804000;
+  color: white;
 }
 .titulares h1{
   font-size: 49px;
@@ -136,11 +138,12 @@
 .beneficios{
   padding: 50px 50px;
   background: linear-gradient(to bottom, #F1EBE3, #E1D4C4,#804000);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='250' preserveAspectRatio='none' viewBox='0 0 1440 250'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1075%26quot%3b)' fill='none'%3e%3crect width='1440' height='250' x='0' y='0' fill='rgba(241%2c 235%2c 227%2c 1)'%3e%3c/rect%3e%3cpath d='M45 250L295 0L569.5 0L319.5 250z' fill='url(%23SvgjsLinearGradient1076)'%3e%3c/path%3e%3cpath d='M262.6 250L512.6 0L830.6 0L580.6 250z' fill='url(%23SvgjsLinearGradient1076)'%3e%3c/path%3e%3cpath d='M517.2 250L767.2 0L986.2 0L736.2 250z' fill='url(%23SvgjsLinearGradient1076)'%3e%3c/path%3e%3cpath d='M740.8000000000001 250L990.8000000000001 0L1157.3000000000002 0L907.3000000000001 250z' fill='url(%23SvgjsLinearGradient1076)'%3e%3c/path%3e%3cpath d='M1424 250L1174 0L1079.5 0L1329.5 250z' fill='url(%23SvgjsLinearGradient1077)'%3e%3c/path%3e%3cpath d='M1172.4 250L922.4000000000001 0L565.4000000000001 0L815.4000000000001 250z' fill='url(%23SvgjsLinearGradient1077)'%3e%3c/path%3e%3cpath d='M937.8 250L687.8 0L554.3 0L804.3 250z' fill='url(%23SvgjsLinearGradient1077)'%3e%3c/path%3e%3cpath d='M680.1999999999999 250L430.19999999999993 0L224.69999999999993 0L474.69999999999993 250z' fill='url(%23SvgjsLinearGradient1077)'%3e%3c/path%3e%3cpath d='M1200.9133783500788 250L1440 10.913378350078744L1440 250z' fill='url(%23SvgjsLinearGradient1076)'%3e%3c/path%3e%3cpath d='M0 250L239.08662164992126 250L 0 10.913378350078744z' fill='url(%23SvgjsLinearGradient1077)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1075'%3e%3crect width='1440' height='250' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1076'%3e%3cstop stop-color='rgba(128%2c 64%2c 0%2c 0.49)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(128%2c 64%2c 0%2c 0.49)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1077'%3e%3cstop stop-color='rgba(128%2c 64%2c 0%2c 0.49)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(128%2c 64%2c 0%2c 0.49)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
   text-align: center;
 }
 .beneficios-tarjetas{
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .tarjetas-beneficios{
@@ -148,8 +151,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   margin: 10px;
   padding: 20px;
   background-color: white;
@@ -158,8 +161,8 @@
   box-shadow: 0px -5px 10px #804000;
 }
 .tarjetas-beneficios svg{
-  width: 150px;
-  height: 100px;
+  width: 75px;
+  height: 50px;
 }
 
 .pie-pagina{
@@ -184,4 +187,26 @@
   width: 36px;
   height: 36px;
   margin: 10px 10px;
+}
+
+@media screen and (max-width: 1150px){
+  .jumbotron{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+  }
+  .carrusel{
+    order: 1;
+    margin-bottom: 7px;
+  }
+  .titulares{
+    order: 2;
+  }
+  .titulares h3{
+    margin-bottom: 50px;
+  }
+  .contacto{
+    order: 3;
+  }
 }
