--- a/styles/style.css
+++ b/styles/style.css
@@ -47,6 +47,9 @@
   margin-right: 50px;
 }
 
+main{
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1008%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='%231a4e83'%3e%3c/rect%3e%3cpath d='M0 0L990.73 0L0 500.06z' filter='url(%23SvgjsFilter1009)' fill='rgba(219%2c 188%2c 160%2c 1)'%3e%3c/path%3e%3cpath d='M0 560L990.73 560L0 59.94z' filter='url(%23SvgjsFilter1009)' fill='rgba(219%2c 188%2c 160%2c 1)'%3e%3c/path%3e%3cpath d='M1440 560L449.27 560L1440 59.94z' filter='url(%23SvgjsFilter1009)' fill='rgba(219%2c 188%2c 160%2c 1)'%3e%3c/path%3e%3cpath d='M1440 0L449.27 0L1440 500.06z' filter='url(%23SvgjsFilter1009)' fill='rgba(219%2c 188%2c 160%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1008'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3cfilter height='130%25' id='SvgjsFilter1009'%3e%3cfeGaussianBlur in='SourceAlpha' stdDeviation='5' result='TopLeftG'%3e%3c/feGaussianBlur%3e%3cfeOffset dx='-5' dy='-5' in='TopLeftG' result='TopLeftO'%3e%3c/feOffset%3e%3cfeComponentTransfer in='TopLeftO' result='TopLeftC'%3e%3cfeFuncA type='linear' slope='0.7'%3e%3c/feFuncA%3e%3c/feComponentTransfer%3e%3cfeGaussianBlur in='SourceAlpha' stdDeviation='5' result='TopRightG'%3e%3c/feGaussianBlur%3e%3cfeOffset dx='5' dy='-5' in='TopRightG' result='TopRightO'%3e%3c/feOffset%3e%3cfeComponentTransfer in='TopRightO' result='TopRightC'%3e%3cfeFuncA type='linear' slope='0.7'%3e%3c/feFuncA%3e%3c/feComponentTransfer%3e%3cfeGaussianBlur in='SourceAlpha' stdDeviation='5' result='BottomLeftG'%3e%3c/feGaussianBlur%3e%3cfeOffset dx='-5' dy='5' in='BottomLeftG' result='BottomLeftO'%3e%3c/feOffset%3e%3cfeComponentTransfer in='BottomLeftO' result='BottomLeftC'%3e%3cfeFuncA type='linear' slope='0.7'%3e%3c/feFuncA%3e%3c/feComponentTransfer%3e%3cfeGaussianBlur in='SourceAlpha' stdDeviation='5' result='BottomRightG'%3e%3c/feGaussianBlur%3e%3cfeOffset dx='5' dy='5' in='BottomRightG' result='BottomRightO'%3e%3c/feOffset%3e%3cfeComponentTransfer in='BottomRightO' result='BottomRightC'%3e%3cfeFuncA type='linear' slope='0.7'%3e%3c/feFuncA%3e%3c/feComponentTransfer%3e%3cfeMerge%3e%3cfeMergeNode in='TopLeftC'%3e%3c/feMergeNode%3e%3cfeMergeNode in='TopRightC'%3e%3c/feMergeNode%3e%3cfeMergeNode in='BottomLeftC'%3e%3c/feMergeNode%3e%3cfeMergeNode in='BottomRightC'%3e%3c/feMergeNode%3e%3cfeMergeNode in='SourceGraphic'%3e%3c/feMergeNode%3e%3c/feMerge%3e%3c/filter%3e%3c/defs%3e%3c/svg%3e");
+}
 .jumbotron{
   display: grid;
   grid-template-columns: 2, 1fr;
@@ -112,6 +115,11 @@
   flex-wrap: wrap;
   justify-content: center;
   max-width: 1020px;
+  border-top: 45px solid #432616;
+  border-bottom: 45px solid #432616;
+  border-right: 45px solid #432616;
+  border-left: 45px solid #432616;
+  
 }
 .tarjetas-catalogo{
   margin: 25px 15px;
@@ -227,7 +235,4 @@
   .contacto h5{
     font-size: 18px;
   }
-}
-@media screen and(width:555px) {
- 
 }
